<resources>
    <string name="app_name">Android Project</string>

    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>

    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>

    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>

    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="signin">Sign in</string>
    <string name="signup">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="logo">Logo</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="login">Login</string>
    <string name="create_new_account">Don\'t have account ? Sign up</string>
    <string name="error_signin">Invalied Email or Password, Please Cheak and try again</string>
    <string name="confirmpass">Confrim Password</string>
    <string name="username">Full Name</string>
    <string name="have_account">Have Account ? Sign in</string>
    <string name="phone_number">Phone Number</string>
    <string name="dob">Date OF Birth</string>
    <string name="finish">Finish</string>
    <string name="foundtion_name">Foundtion Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="weight">Weight</string>
    <string name="diseases">Diseases</string>
    <string name="back">Back</string>
    <string name="registration_type">RegistrationType</string>
    <string name="payment_way">Payment Way</string>
    <string name="visa">Visa</string>
    <string name="location">Location</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_patient">patient</string>
    <string name="title_pharmaceutical">pharmaceutical</string>
    <string name="title_saves">saves</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
<<<<<<< HEAD
    <string name="messages">messages</string>
    <string name="my_midicine">My Midicine</string>
=======
>>>>>>> e43e3019869dfb80016e93c38ac46bd929369392
    <string name="choose_account_type">Choose Account Type</string>
    <string name="foundtion_account">Foundtion Account</string>
    <string name="student_account">Student Account</string>
    <string name="patient_account">Patient Account</string>
<<<<<<< HEAD
>>>>>>> 345f063d768284b8c71fa3925e28c6117ae55650
=======
    <string name="messages">messages</string>
    <string name="my_midicine">My Midicine</string>
>>>>>>> e43e3019869dfb80016e93c38ac46bd929369392
</resources>
